--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "follow-redirects": "^1.15.6",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
+    "midtrans-node": "^1.1.5",
+    "midtrans-node-client": "^0.0.6",
     "mongoose": "^8.4.5",
     "node-cron": "^3.0.3",
+    "nodejs-base64-encode": "^1.1.0",
     "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "tsconfig": "^7.0.0",
